# novatel_gps_driver

./: README.md
novatel_gps_driver/: CMakeLists.txt  package.xml
novatel_gps_driver/include/novatel_gps_driver/parsers/: corrimudata.h
novatel_gps_driver/launch/: tester_for_usb.launch
novatel_gps_driver/src/nodelets/: novatel_gps_nodelet.cpp
script/: novatel_gps_driver_dependence_setup
serial_port/: CMakeLists.txt  package.xml
serial_port/launch/: serial_port.launch
serial_port/msg/: BDSephem.msg  Gprmc.msg  Range.msg
serial_port/src/: serial_port.cpp  serial_port_c.cpp
